# docs/openapi.yaml
@@ -4,27 +4,25 @@
 openapi: 3.0.3
 info:
     title: AitrailblazerService API
-    description: The greeting service definition.
     version: 0.0.1
 paths:
-    /v1/echo:
-        post:
+    /v1/ping:
+        get:
             tags:
                 - AitrailblazerService
-            operationId: AitrailblazerService_Echo
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/StringMessage'
-                required: true
+            operationId: AitrailblazerService_Send
+            parameters:
+                - name: message
+                  in: query
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/StringMessage'
+                                $ref: '#/components/schemas/Response'
                 default:
                     description: Default error response
                     content:
@@ -41,6 +39,22 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        Pong:
+            type: object
+            properties:
+                index:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                receivedOn:
+                    type: string
+                    format: date-time
+        Response:
+            type: object
+            properties:
+                pong:
+                    $ref: '#/components/schemas/Pong'
         Status:
             type: object
             properties:
@@ -57,10 +71,5 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        StringMessage:
-            type: object
-            properties:
-                value:
-                    type: string
 tags:
     - name: AitrailblazerService
